--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
       body {
         font-family: Arial, sans-serif;
+        color: rgba(158, 92, 10, 0.8);
       }
 
       table {
