--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <style>
+      h1, .label{
+        text-align: center;
+        color: #ff1111;
+      }
+      form{
+        text-align: center;
+      }
       body {
         font-family: Arial, sans-serif;
-        color: rgba(158, 92, 10, 0.8);
+        background: rgb(225,235,162);
+        background: radial-gradient(circle, rgba(225,235,162,1) 58%, rgba(207,158,43,1) 100%);
       }
 
       table {
@@ -50,7 +58,7 @@
     </table>
 
     <form>
-      <label for="move">Enter your move (1-9): </label>
+      <label for="move" class="label">Enter your move (1-9): </label>
       <input type="number" id="move" name="move" min="1" max="9" />
       <button type="button" onclick="submitMove()">Submit Move</button>
     </form>
